{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 95,
  "lineage": "c49bb17d-2247-e070-7e9e-fe1100558a72",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "github_runner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2e7efb4257c0907",
            "arn": "arn:aws:ec2:ca-central-1:645860290752:instance/i-0075baeb61b419287",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0075baeb61b419287",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "projet-c-local-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0765bb7845d603e37",
            "private_dns": "ip-10-0-101-43.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.43",
            "public_dns": "ec2-15-223-200-95.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.223.200.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c9ae6154e3d02577",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02709f4227863bb07",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-github-runner",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-github-runner",
              "Project": "projet-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2f13ea8f8db8e46"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.instances",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a2e7efb4257c0907",
            "arn": "arn:aws:ec2:ca-central-1:645860290752:instance/i-0ed41fe5a11081662",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed41fe5a11081662",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "projet-c-local-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005accc1fe3677b0d",
            "private_dns": "ip-10-0-101-234.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.234",
            "public_dns": "ec2-99-79-40-43.ca-central-1.compute.amazonaws.com",
            "public_ip": "99.79.40.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01a7f5efc4ec23387",
                "volume_size": 32,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02709f4227863bb07",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-sonarqube",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-sonarqube",
              "Project": "projet-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2f13ea8f8db8e46"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.instances",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.deployer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:security-group/sg-0a2f13ea8f8db8e46",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2f13ea8f8db8e46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "projet-c-instances-sg",
            "name_prefix": "",
            "owner_id": "645860290752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Project": "projet-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:network-acl/acl-0e91b9b7304ea9ddc",
            "default_network_acl_id": "acl-0e91b9b7304ea9ddc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e91b9b7304ea9ddc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "645860290752",
            "subnet_ids": [
              "subnet-02709f4227863bb07",
              "subnet-09489980017ae3f38",
              "subnet-0989cf2bbe9fbe32e",
              "subnet-0ed012ba74c7c2a04"
            ],
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-default",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-default",
              "Project": "projet-c"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:route-table/rtb-039290ba606676e08",
            "default_route_table_id": "rtb-039290ba606676e08",
            "id": "rtb-039290ba606676e08",
            "owner_id": "645860290752",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-default",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-default",
              "Project": "projet-c"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:security-group/sg-0fb93e1023f34d556",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fb93e1023f34d556",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "645860290752",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-default",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-default",
              "Project": "projet-c"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067fada777cc6e3f3",
            "arn": "arn:aws:ec2:ca-central-1:645860290752:elastic-ip/eipalloc-067fada777cc6e3f3",
            "association_id": "eipassoc-03647e5b6b1f8e97a",
            "domain": "vpc",
            "id": "eipalloc-067fada777cc6e3f3",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0cef649398ab8ce6f",
            "private_dns": "ip-10-0-101-235.ca-central-1.compute.internal",
            "private_ip": "10.0.101.235",
            "public_dns": "ec2-52-60-214-190.ca-central-1.compute.amazonaws.com",
            "public_ip": "52.60.214.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-ca-central-1a",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-ca-central-1a",
              "Project": "projet-c"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:internet-gateway/igw-0e23ffa044022107e",
            "id": "igw-0e23ffa044022107e",
            "owner_id": "645860290752",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc",
              "Project": "projet-c"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067fada777cc6e3f3",
            "association_id": "eipassoc-03647e5b6b1f8e97a",
            "connectivity_type": "public",
            "id": "nat-0029150e8a37fdfed",
            "network_interface_id": "eni-0cef649398ab8ce6f",
            "private_ip": "10.0.101.235",
            "public_ip": "52.60.214.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02709f4227863bb07",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-ca-central-1a",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-ca-central-1a",
              "Project": "projet-c"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e890906d9b3467141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0029150e8a37fdfed",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e890906d9b346714",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e23ffa044022107e",
            "id": "r-rtb-064d26a4fa0cbbbd51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064d26a4fa0cbbbd5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:route-table/rtb-0e890906d9b346714",
            "id": "rtb-0e890906d9b346714",
            "owner_id": "645860290752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0029150e8a37fdfed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-private",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-private",
              "Project": "projet-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:route-table/rtb-064d26a4fa0cbbbd5",
            "id": "rtb-064d26a4fa0cbbbd5",
            "owner_id": "645860290752",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e23ffa044022107e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-public",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-public",
              "Project": "projet-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6a6c72c6dd33afe",
            "route_table_id": "rtb-0e890906d9b346714",
            "subnet_id": "subnet-0ed012ba74c7c2a04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035341da80aba6f04",
            "route_table_id": "rtb-0e890906d9b346714",
            "subnet_id": "subnet-09489980017ae3f38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0528b9de2d1f7a393",
            "route_table_id": "rtb-064d26a4fa0cbbbd5",
            "subnet_id": "subnet-02709f4227863bb07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d877068f8d28369b",
            "route_table_id": "rtb-064d26a4fa0cbbbd5",
            "subnet_id": "subnet-0989cf2bbe9fbe32e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:subnet/subnet-0ed012ba74c7c2a04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed012ba74c7c2a04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "645860290752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-private-ca-central-1a",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-private-ca-central-1a",
              "Project": "projet-c"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:subnet/subnet-09489980017ae3f38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09489980017ae3f38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "645860290752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-private-ca-central-1b",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-private-ca-central-1b",
              "Project": "projet-c"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:subnet/subnet-02709f4227863bb07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02709f4227863bb07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "645860290752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-public-ca-central-1a",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-public-ca-central-1a",
              "Project": "projet-c"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:subnet/subnet-0989cf2bbe9fbe32e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0989cf2bbe9fbe32e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "645860290752",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-public-ca-central-1b",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc-public-ca-central-1b",
              "Project": "projet-c"
            },
            "vpc_id": "vpc-019c80408b8814dfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:645860290752:vpc/vpc-019c80408b8814dfe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e91b9b7304ea9ddc",
            "default_route_table_id": "rtb-039290ba606676e08",
            "default_security_group_id": "sg-0fb93e1023f34d556",
            "dhcp_options_id": "dopt-0ea34e9e223031242",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019c80408b8814dfe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039290ba606676e08",
            "owner_id": "645860290752",
            "tags": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc",
              "Project": "projet-c"
            },
            "tags_all": {
              "Environment": "local",
              "ManagedBy": "Terraform",
              "Name": "projet-c-vpc",
              "Project": "projet-c"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}